# gstreamer-sandbox

./: .ccls  .gitignore  .gitmodules  :w  Dockerfile  Makefile  go.mod  gstblur.py  main  main.cpp  main.go  meson.build  open.py  output.mkv  output.ts  output.webm  pipeline-file.py  pipeline-print.py  pipeline-rtp.py  pipeline.py  plugin.py  proxy.webm  requirements.txt  result.webm  transform.py
cmd/server/: main.go
greetmodule/: __init__.py  greeting.py  xor_module.py
gstreamer/: utils.py
nix/media-server/: derivation.nix
rtp/: rtp.go
rtp/cython/: func.go  runtime.go  utils.go
rtp/pipeline/: __init__.py  setup.py
subprojects/: gstreamer-1.0.wrap
subprojects/pipelines/: meson.build  pipelines.cpp  pipelines.h
subprojects/pipelines/proxy-pipe/: meson.build  proxy_pipe.cpp  proxy_pipe.h
